# grid-apps

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README-dev.rst  README.rst  THIRD_PARTY_SOFTWARE.rst  deps-lock-config.yaml  install.bat  install_in_analyst.bat  meta.yaml  package.rst  pixi.toml  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  py-3.13.conda-lock.yml  py-3.14.conda-lock.yml  pylintrc  pyproject.toml  recipe.yaml
.github/: dependabot.yml
.github/workflows/: issue_to_jira.yml  pr_add_jira_summary.yml  pr_jira_actions.yml  pytest-unix-os.yml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  security_scan.yml  static-analysis.yml
devtools/: add_url_tag_sha256.py  check-copyright.py  git_message_hook.py  rename_my_app.py
docs/: environment.yml
docs/source/: THIRD_PARTY_SOFTWARE.rst  applications.rst  block_model.rst  block_model_to_octree.rst  conf.py  getting_started.rst  index.rst  octree_creation.rst  usage.rst
docs/source/api/: grid_apps.block_model_to_octree.rst  grid_apps.block_models.rst  grid_apps.octree_creation.rst  grid_apps.rst
environments/: env-python-3.10.yml  env-python-3.14.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml  py-3.13-linux-64-dev.conda.lock.yml  py-3.13-linux-64.conda.lock.yml  py-3.13-win-64-dev.conda.lock.yml  py-3.13-win-64.conda.lock.yml  py-3.14-linux-64-dev.conda.lock.yml  py-3.14-linux-64.conda.lock.yml  py-3.14-win-64-dev.conda.lock.yml  py-3.14-win-64.conda.lock.yml
grid_apps/: __init__.py  driver.py  main.py  utils.py
grid_apps-assets/: __init__.py
grid_apps-assets/uijson/: block_model_creation.ui.json  block_model_to_octree.ui.json  block_models.ui.json  hello.ui.json  octree_mesh.ui.json
grid_apps/block_model_to_octree/: driver.py  options.py
grid_apps/block_models/: __init__.py  driver.py  options.py  params.py
grid_apps/commands/: __init__.py  hello_world.py
grid_apps/octree_creation/: __init__.py  driver.py  options.py
my_app/: __init__.py
my_app/commands/: hello_world.py
tests/: __init__.py  assets_path_test.py  block_2_octree_test.py  block_model_test.py  conftest.py  parameters_test.py  utils_test.py  version_test.py
tests/run_tests/: __init__.py  block_2_octree_test.py  block_model_test.py
tests/run_tests/octree_creation/: conftest.py  params_test.py  run_test.py
