[build-system]
requires = [
  "poetry-core>=1.8.0",
  "poetry-dynamic-versioning>=1.9.1,<2.0",
  # list dependencies to work with PIP_NO_DEPS=1
  "MarkupSafe>=2.0",
  "dunamai>=1.25,<2.0",
  "jinja2>=3.0,<4.0",
  "packaging>=24.0",
  "tomlkit>=0.13",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "grid-apps"
requires-python = '>=3.10,<4.0'

description = "Grid creation and manipulation"
license = "Proprietary"
keywords = [
    "earth-science",
    "geoh5",
    "geology",
    "geophysics",
    "mining",
    "open-science",
]
readme = "package.rst"
dynamic = ["version", "dependencies", "classifiers"]
authors = [{name = "Mira Geoscience", email = "support@mirageoscience.com"}]
maintainers = [
    { name = "Benjamin Kary", email = "benjamink@mirageoscience.com" },
    { name = "Dominique Fournier", email = "dominiquef@mirageoscience.com" }
]

dependencies = [
    # Mira packages
    "geoapps-utils >= 0.6.0a, == 0.6.*",
    "geoh5py >= 0.12.0a1, == 0.12.*",
    # other direct dependencies
    "discretize == 0.11.*",
    "numpy == 1.26.*",
    "pydantic >= 2.5.2, == 2.*",
    "scipy == 1.14.*",
]

[project.urls]
repository = "https://github.com/MiraGeoscience/grid-apps"
homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
documentation  = "https://mirageoscience-grid-apps.readthedocs-hosted.com/"

[tool.poetry]
requires-poetry = '>=2.0,<3.0'

packages = [
     { include = "grid_apps" },
     { include = "grid_apps-assets" },
]

include = [
    { path = "COPYING" },
    { path = "COPYING.LESSER" },
    { path = "LICENSE" },
    { path = "README.rst" },
    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
version = "0.0.0.dev0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.9.1,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = true
enable = true
fix-shallow-repository = true
strict = true
style = "pep440"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["grid_apps/_version.py", "recipe.yaml"]
patterns = [
    { value = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', mode = "str" },
    { value = '''(^\s*version\s*(?::.*?)?:\s*['"])[^'"]*(['"])''', mode = "str" },
]

[tool.poetry-dynamic-versioning.files."grid_apps/_version.py"]
persistent-substitution = true
initial-content = """
  # Version placeholder that will be replaced during substitution
  __version__ = "0.0.0"
"""

[tool.poetry-dynamic-versioning.files."recipe.yaml"]
persistent-substitution = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "B028",  # no-explicit-stacklevel for warnings.warn()
    "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
    "F401",  # unsused-import - covered by pycln
    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "B006",  # Do not use mutable data structures for argument defaults
    "B9",  # flake8-bugbear opiniated warnings
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff rules
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# default formatting is just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy"
]

[tool.pytest.ini_options]
#addopts =

[tool.coverage.run]
branch = true
source = ["grid_apps"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 50

[tool.coverage.html]
skip_empty = true
skip_covered = true
